# rasch_counter

./: .coverage  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  all_results_callback.txt  bot.py  bot_config.env  data_processor.py  deploy.sh  deploy_production.sh  docker-compose.yml  main.py  namuna_test_data.xlsx  production.env  public_website.py  pyproject.toml  pytest.ini  rasch-bot.service  rasch-counter-bot.service  rasch_model.py  rasch_model_1pl.py  rasch_model_2pl.py  rasch_model_ce71811.py  rasch_model_initial.py  rasch_model_reorganized.py  replit.md  requirements-dev.txt  requirements.txt  run.py  run_tests.py  setup.py  start_bot.bat  telegram_bot.py  telegram_bot.py.bak  test_production_fixes.py  test_rasch_model.py  test_real_data.py  user_database.json  (+1 more)
.data/: rasch_matrix_100x55.xlsx
.github/workflows/: ci.yml
certs/: cert.pem  key.pem
config/: logging.py  settings.py
deployment/: Dockerfile  docker-compose.yml  fluentd.conf  prometheus.yml  simple-monitoring.yml
deployment/grafana/dashboards/: rasch-bot.json
mobile_app/: App.tsx  README.md  package.json
src/: main.py
src/bot/: bot_database.py  health_check.py  telegram_bot.py
src/data_processing/: data_processor.py  insights.py
src/models/: rasch_model.py  rasch_model_current.py
src/services/: analysis_service.py
src/utils/: error_handling.py  monitoring.py  performance.py  production_fixes.py  utils.py  validation.py
tests/: test_data_generator.py  test_error_handling.py  test_integration.py  test_monitoring.py  test_performance.py  test_rasch_model.py  test_rasch_model_comprehensive.py  test_real_data.py  test_utils.py  test_validation.py
web_app/: app.py  requirements.txt  run_web.py
web_app/templates/: index.html
web_app/uploads/: 06-APREL_2.xls  Rast.xlsx  namuna_data_1758640407.xlsx  namuna_data_1758640417.xlsx  namuna_data_1758640450.xlsx  sertifikat_8_1_2.xls  st7.xls  togrikurinish.xlsx
