[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.75.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pypdf2>=3.0.1",
    "pytelegrambotapi>=4.12.0",
    "reportlab>=4.4.0",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "streamlit>=1.44.1",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
    "xlsxwriter>=3.2.2",
]
